--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>CRUD</title>
 </head>
 <body>
+    <header class="header">
+        <nav class="nav">
+          <a href="#" class="nav_logo">CRUD</a>
+        </nav>
+      </header>
     
 </body>
 </html>
