create and style the body also added background image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
           <a href="#" class="nav_logo">CRUD</a>
         </nav>
       </header>
+
+      <section class="home">
+        <div class="form_container">
+            <div class="form">
+
+                
+            </div>
+        </div>
+      </section>
     
 </body>
 </html>
