--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </div>
       </section>
-    
+      <script src="./script.js" type="module"></script>
 </body>
 </html>
